--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,11 @@
     package="com.example.pebblenav"
     android:versionCode="1"
     android:versionName="1.0" >
-
+  
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
