--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
   
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.INTERNET"/>
   
     
     <uses-sdk
@@ -15,6 +16,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:apiKey="AIzaSyCA7DmikdtewtB-ofJlVPCf3X41L2M7kDw"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
